[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UI/Menu.gd" type="Script" id=1]
[ext_resource path="res://Font/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sounds/button.wav" type="AudioStream" id=3]
[ext_resource path="res://Global/menu_bg.png" type="Texture" id=4]

[node name="Menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 120, 80 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_right = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 80.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 80.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 80.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_top = 32.0
margin_right = 86.0
margin_bottom = 219.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = ExtResource( 2 )
text = "Player 1:
W,A,S,D

Throw: F"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 168.0
margin_top = 32.0
margin_right = 254.0
margin_bottom = 219.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Player 2:
Up, Down,
Left, 
Right

Throw: K
or /"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
